# pypoker-eval

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  build_wheel.py  pokereval.py  pypokereval.c  setup.py  setup_win.py
.github/workflows/: ci.yaml
include/: Makefile.am  config.h  config.h.in  config.h.in~  deck_astud.h  deck_short.h  deck_std.h  enumdefs.h  game_short.h  rules_short.h
include/inlines/: eval_short.h
lib/: Makefile.am  deck_short.c  enumerate.c  evx_gen5  evx_gen7  evx_generate.c  mktab_astud  mktab_basic  mktab_evx  mktab_joker  mktab_lowball  mktab_packed  mktab_short  mktab_short.c  rules_short.c  t_shortdeckcardmasks.c
