cmake_minimum_required(VERSION 3.10)
project(PyPokerEvalBinding)

# Détecter le système d'exploitation
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    if(EXISTS "$ENV{USERPROFILE}/AppData/Local/Programs/Python/Python311/python.exe")
        set(Python3_EXECUTABLE "$ENV{USERPROFILE}/AppData/Local/Programs/Python/Python311/python.exe")
        set(Python3_LIBRARY "$ENV{USERPROFILE}/AppData/Local/Programs/Python/Python311/libs/python311.lib")
        set(Python3_INCLUDE_DIR "$ENV{USERPROFILE}/AppData/Local/Programs/Python/Python311/include")
    else()
        set(Python3_EXECUTABLE "C:/Python311/python.exe")
        set(Python3_LIBRARY "C:/Python311/libs/python311.lib")
        set(Python3_INCLUDE_DIR "C:/Python311/include")
    endif()
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(Python3_EXECUTABLE "/usr/local/opt/python@3.11/libexec/bin/python3")
    set(Python3_LIBRARY "/usr/local/opt/python@3.11/Frameworks/Python.framework/Versions/3.11/lib/libpython3.11.dylib")
    set(Python3_INCLUDE_DIR "/usr/local/opt/python@3.11/Frameworks/Python.framework/Versions/3.11/include/python3.11")
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    # Chemins pour l'environnement conda fpdb311
    set(CONDA_PREFIX $ENV{HOME}/anaconda3/envs/fpdb311)
    set(Python3_EXECUTABLE "${CONDA_PREFIX}/bin/python3.11")
    set(Python3_LIBRARY "${CONDA_PREFIX}/lib/libpython3.11.so")
    set(Python3_INCLUDE_DIR "${CONDA_PREFIX}/include/python3.11")
endif()

# Essayer de trouver une installation de Python 3.x
find_package(Python3 COMPONENTS Interpreter Development)
if(Python3_FOUND)
    message(STATUS "Python 3.x trouvé : Version ${Python3_VERSION}, Librairies : ${Python3_LIBRARIES}, Include : ${Python3_INCLUDE_DIRS}")
    include_directories(${Python3_INCLUDE_DIRS})

    if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
        include_directories("${CMAKE_SOURCE_DIR}/poker-eval/include")
        set(POKER_EVAL_LIB_PATH "${CMAKE_SOURCE_DIR}/poker-eval/build/Debug/poker_lib_static.lib")
    elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        message(STATUS "CMAKE_SOURCE_DIR is set to ${CMAKE_SOURCE_DIR}")
        include_directories("${CMAKE_SOURCE_DIR}/poker-eval/include")
        set(POKER_EVAL_LIB_PATH "${CMAKE_SOURCE_DIR}/poker-eval/build/libpoker_lib_static.a")
        message(STATUS "POKER_EVAL_LIB_PATH is set to ${POKER_EVAL_LIB_PATH}")
    elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
        include_directories("${CMAKE_SOURCE_DIR}/poker-eval/include")
        set(POKER_EVAL_LIB_PATH "${CMAKE_SOURCE_DIR}/poker-eval/build/libpoker_lib_static.a")
    endif()

    include_directories("${CMAKE_SOURCE_DIR}/poker-eval/include")

    add_library(pypokereval MODULE pypokereval.c)
    target_link_libraries(pypokereval ${Python3_LIBRARIES} ${POKER_EVAL_LIB_PATH})
    set_target_properties(pypokereval PROPERTIES PREFIX "")
else()
    message(WARNING "Python 3.x n'a pas été trouvé, le binding Python ne sera pas construit.")
endif()
